
gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for libgeda 

Most recent changes are at the top of this file

6/10/99 Added the start of support for not creating text items which are 
	hidden

6/9/99	Increased the number of symbols which can be in a directory to 1024
	from (256) in s_clib.c (s_clib_getfiles)

6/1/99	Fixed a few minor things in s_page.c and s_basic.c (p_circle stuff)

	Put some checks to prevent the coredump condition described below

	Put some casts to make make happy (less warnings)

5/31/99 Fixed printing for nets visual cues

	Removed all traces of the old connection system

	Discovered a core dump condition in clib_cache_free
	(caused by reading in swedish/non-standard-ascii character font
	 files, okay for now)

	Few minor touch up to s_clib.c, but not enough to solve above

5/29/99 Change the license for libgeda back to GPL (from LGPL)

	Put in another check in the o_ales_update_nets function to 
	make sure we don't add duplicate objects into the ales_list's

	Added in code which allows for unattached toplevel attributes
	(o_attrib.c)

5/99	See ChangeLog in gschem for all the changes related to the new
	connection stuff

	All connection stuff is in o_ales.c (will be renamed to o_conn.c
	once things get a big more stable)

5/16/99 Removed ../libgeda/prototype.h from f_print.c

        Removed ../include/x_states.h and ../include/x_events.c

        Moved prototype.h to ../include (change all the source as well)

        Commented out most of ../include/globals.h

5/13/99 Increased the size of buffers and the reading in of attributes 
	(o_attrib.c -- o_read_attribs)

	Increased the size of text strings (in o_ntext_basic.c)
	
	Fixed the appropriate string in s_passing.c (and s_passing.h)

	Fixed text_string allocation size in add_object (s_basic.c) 

	The above changes should fix the bug reported by Thomas Dean

4/27/99 Minor comment fix in include/struct.h
